--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.1",
+    "axios": "^1.2.2",
+    "formik": "^2.2.9",
+    "google-map-react": "^2.2.0",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
+    "leaflet": "^1.9.3",
+    "leaflet-control-geocoder": "^2.4.0",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
+    "react-leaflet": "^4.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
