--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
+    "js-cookie": "^3.0.1",
     "leaflet": "^1.9.3",
     "leaflet-control-geocoder": "^2.4.0",
     "leaflet-routing-machine": "^3.2.12",
