--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-scroll-into-view": "^1.12.0",
     "react-svg": "^15.1.17",
     "redux-thunk": "^2.4.2",
     "swiper": "^8.4.5",
