--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "restaurant",
-  "homepage":"http://eslam588.gith",
+  "homepage":"http://eslam588.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
